# pHash

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  audiophash.cpp  audiophash.h  cimgffmpeg.h  config.h  config.h.in  config.status  configure  configure.ac  dct_image_main.cpp  dct_video_main.cpp  format.sh  libpHash.spec  libtool  pHash-config.h.in  pHash.cpp  pHash.h  pHash.pc.in  pHash.xml  query_mvptree.cpp  test_audiophash.cpp  test_audiophash_main.cpp  test_main.cpp  test_mvptree.cpp
bindings/: Makefile.am
bindings/c#/: pHash.cs
bindings/c_sharp/: pHash.cs
bindings/java/: CMakeLists.txt  Makefile.am  pHash-jni.cpp  pHash-jni.h  pHash-jni.h.cmake  pHash.java  pHash_MVPTree.h  phash-jni.cpp
bindings/java/org/pHash/: AudioHash.java  MVPTree.java  pHash.java
bindings/java/org/phash/: Hash.java  ImageHash.java  MHImageHash.java
bindings/java/phash-jni/: pom.xml
bindings/java/phash-jni/src/main/java/org/phash/ni/audio/: AudioHash.java
bindings/java/phash-jni/src/main/java/org/phash/ni/image/: BMBHash.java  Digest.java  Features.java  ImageHash.java  MHash.java
bindings/java/phash-jni/src/main/java/org/phash/ni/text/: TextHash.java  TxtHashPoint.java  TxtMatch.java
bindings/java/phash-jni/src/main/java/org/phash/ni/video/: VideoHash.java
bindings/java/phash-jni/src/test/java/org/phash/ni/image/: ImageHashTest.java
bindings/php/: .cvsignore  CREDITS  README  acinclude.m4  aclocal.m4  config.m4  configure  pHash.cpp  pHash.dsp  pHash_logos.h  package.xml  php_pHash.h
bindings/php/manual/: file-entities.ent  (+2 more)
bindings/python/: README.md  phash.pxd  phash.pyx  phash_add_directory.py  phash_show_similar.py  setup.py
examples/: Makefile.am  Makefile.in  add_mvptree.cpp  add_mvptree_audio.cpp  add_mvptree_dct.cpp  build_mvptree  build_mvptree.cpp  build_mvptree_audio.cpp  build_mvptree_mh.cpp  buildmvptree_dctimage.cpp  imghash.cpp  query_mvptree.cpp  query_mvptree_audio.cpp  query_mvptree_dct.cpp  query_mvptree_mh.cpp  test_audiohash.cpp  test_audiophash.cpp  test_audiophash_main.cpp  test_bmbimagehash.cpp  test_dctvideohash.cpp  test_image  test_imagephash.cpp  test_mhimagehash.cpp  test_mhimagehash_mt.cpp  test_radish.cpp  test_texthash.cpp  test_texthash2.cpp  test_video
phash-win32/: README.rtf  pHash.sln  pHash.vcproj
phash-win32/examples/: add_mvptree.cpp  add_mvptree2.cpp  add_mvptree_audio.cpp  add_mvptree_dct.cpp  add_mvptree_mh.cpp  build_mvptree.cpp  build_mvptree2.cpp  build_mvptree_audio.cpp  build_mvptree_dct.cpp  build_mvptree_mh.cpp  query_mvptree.cpp  query_mvptree2.cpp  query_mvptree_audio.cpp  query_mvptree_dct.cpp  query_mvptree_mh.cpp  test_audio_mt.cpp  test_audiophash.cpp  test_audiophash_main.cpp  test_dctvideohash.cpp  test_mhimagehash.cpp  testdirent.cpp  testimagehash.sln  texthash.cpp  texthash2.cpp
phash-win32/src/: audiophash.cpp  audiophash.h  cimgffmpeg.cpp  cimgffmpeg.h  dirent.c  dirent.h  mman.cpp  mman.h  pHash.cpp  pHash.h  pHash.ncb  pHash.sln  pHash.vcproj  ph_fft.c  ph_fft.h  phcomplex.c  phcomplex.h
resources/: alice.txt  aliceparag.txt
src/: CImg.h  Makefile  Makefile.am  Makefile.in  audiophash.cpp  audiophash.h  audiophash.h.cmake  bmbhash.cpp  cimgffmpeg.cpp  cimgffmpeg.h  cimgffmpeg.h.cmake  pHash.cpp  pHash.h  pHash.h.cmake  ph_fft.c  ph_fft.cpp  ph_fft.h
tests/: audiohash-compare-test.cpp  audiohash-countsamples-test.cpp  audiohash-readaudio-test.cpp  bmb-imagehash-test.cpp  dct-imagehash-test.cpp  dct-videohash-test.cpp  fft-test.cpp  mh-imagehash-test.cpp  radial-imagehash-test.cpp  txthash-compare-test.cpp
trunk/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  add_mvptree.cpp  audiophash.cpp  audiophash.h  build_mvptree.cpp  cimgffmpeg.h  config.h  config.h.in  configure  configure.ac  dct_video_main.cpp  libpHash.spec  libtool  pHash-config.h.in  pHash.cpp  pHash.h  pHash.xml  remcom  test_audiophash.cpp  test_imagephash.cpp  test_main.cpp  test_videophash.cpp
trunk/bindings/: CMakeLists.txt
trunk/bindings/java/: Makefile.am  README  build.xml  pHash-jni.c  pHash-jni.cpp  pHash-jni.h  pHash.java  pHash_MVPTree.h
trunk/bindings/java/org/pHash/: DCTImageHash.java  Hash.java  ImageHash.java  MHImageHash.java  TextHash.java  VideoHash.java
trunk/bindings/java/org/phash/: AudioHash.java  DCTImageHash.java  MVPTree.java  RadialImageHash.java  TextHash.java  VideoHash.java  pHash.java
trunk/bindings/php/: README  acinclude.m4  config.h.in  config.m4  config.w32  configure.in  pHash.cpp  pHash.xml  package.xml  package2.xml  php_pHash.h
trunk/bindings/php/manual/pHash/: reference.xml
trunk/bindings/php/manual/pHash/functions/: ph-compare-text-hashes.xml  ph-dct-imagehash.xml  ph-image-dist.xml
trunk/bindings/php/tests/: ph_dct_videohash.phpt  ph_video_dist.phpt
trunk/examples/: Makefile  Makefile.am  Makefile.in  add_mvptree  add_mvptree.cpp  add_mvptree_audio.cpp  add_mvptree_dct.cpp  add_mvptree_mh.cpp  build_mvptree.cpp  build_mvptree_audio.cpp  buildmvptree_dctimage.cpp  query_mvptree  query_mvptree.cpp  query_mvptree_audio.cpp  test_audio  test_audiohash.cpp  test_audiophash.cpp  test_bmbimagehash.cpp  test_dctvideohash.cpp  test_mhimagehash.cpp
trunk/phash-win32/: pHash.sln  pHash.vcproj
trunk/phash-win32/bindings/java/: pHash_MVPTree.h
trunk/phash-win32/examples/: add_mvptree.cpp  add_mvptree_audio.cpp  build_mvptree.cpp  build_mvptree2.cpp  build_mvptree_audio.cpp  build_mvptree_dct.cpp  query_mvptree.cpp  query_mvptree_audio.cpp  query_mvptree_mh.cpp  test_audiophash.cpp  test_audiophash_main.cpp  test_dctvideohash.cpp  testimagehash.ncb  testimagehash.vcproj
trunk/phash-win32/src/: audiophash.cpp  audiophash.h  cimgffmpeg.cpp  mman.cpp  mman.h  pHash.cpp  pHash.h  ph_fft.c  ph_fft.h  phcomplex.c  phcomplex.h
trunk/src/: CImg.h  CMakeLists.txt  Makefile.am  Makefile.in  audiophash.cpp  audiophash.h  cimgffmpeg.cpp  cimgffmpeg.h  pHash.cpp  pHash.h  pHash.h.cmake  ph_fft.c  ph_fft.h
trunk/tests/: fft-test.c
(+15 files in other folders)
